
ChangeLog
---------

Version 2021.01.00-a2 - ??-???-2021:
 - Added MID$ command (as opposed to the already existing MID$() function) from
   the CMM2.
 - Changed CONSOLE SETCURSOR command to allow a maximum x, y of 1023
   (previously 255) and updated "examples/mandelbrot.bas" to support this.
 - Added optional integer argument (default 1) to ERROR command allowing an error
   code to be specified, this can be retrieved using MM.ERRNO, e.g.
       ERROR "error message", 220
   For MMB4L the values of MM.ERRNO are:
    - 0        : no error.
    - 1        : unclassified MMBasic error, also reported if a C library call
                 reports the error EPERM (Operation not permitted).
                 Note this differs from other versions of MMBasic which use the
                 value of 16 for general errors, which would correspond to the
                 EBUSY (Device or resource busy) error from a C library call.
    - 2..150   : standard error numbers (errno) for C library calls.
    - 151..200 : reserved for future classification of MMBasic errors.
    - 201..255 : suggested range for program specific error codes.
    - error codes from the SYSTEM command are an exception to this rule,
      see the next entry.
 - Changed SYSTEM command to set MM.ERRNO equal to the executed program's
   exit code. Also changed error message to include this value.
 - Changed "mmbasic.nanorc" to make behaviour more like the CMM2 editor:
    - added 'set constantshow' so the cursor position display is always visible.
    - added 'set zap' so that [Delete] and [Backspace] erase all the selected
      text instead of just a single character.
    - either of these can be commented out with # if you prefer.
 - Fixed timeout bugs with CONSOLE GETCURSOR:
     - increase the timeout to 10s.
     - correct the unsigned 64-bit arithmetic used in timing code.
 - Fixed bug where navigating the command prompt history with up/down arrow